--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -16,6 +16,7 @@
 *::after {
   margin: 0;
   padding: 0;
+  /* 盒子模型 */
   box-sizing: border-box;
 }
 
@@ -26,6 +27,7 @@ body {
   background: var(--color-background);
   color: var(--color-text);
   /* rem vw/vh */
+  /* body时钟占据视口的100% */
   width: 100vw;
 }
 
