登录和注册界面的静态实现

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,6 @@
 /* <!-- 清除默认样式 --> */
 @import "./normalize.css";
+@import "../font-awesome-4.7.0/css/font-awesome.css"
 
 /*:root -> 获取根元素html*/
 :root {
