--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,6 +1,8 @@
 /* <!-- 清除默认样式 --> */
+/* 引入字体图标 */
 @import "./normalize.css";
-@import "../font-awesome-4.7.0/css/font-awesome.css"
+@import "../font-awesome-4.7.0/css/font-awesome.css";
+@import "../iconfont/font/iconfont.css";
 
 /*:root -> 获取根元素html*/
 :root {
